[package]
name = "jito-sdk-rust"
version = "0.1.0"
authors = ["mdr0id <marshall@jito.wtf>"]
edition = "2021"


# Add these fields
description = "Rust SDK for interacting with Jito RPC services on Solana"
license = "MIT"
repository = "https://github.com/jito-labs/jito-rust-rpc"
homepage = "https://www.jito.wtf/"
keywords = ["solana", "rpc", "jito", "blockchain", "sdk"]

[dependencies]
reqwest = { version = "0.12.12", features = ["json"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full", "macros"] }
anyhow = "1.0"
serde = { version = "1.0.209", features = ["derive"] }
bincode = "1.3.3"
bs58 = "0.5.1"
rand = "0.8"
tonic = "0.10"
prost = "0.12"
futures = "0.3"

# Remove the [[example]] section if it exists

[dev-dependencies]
base64 = "0.22.1"
solana-client = "2.1.7"
solana-sdk = "2.1.6"

[build-dependencies]
tonic-build = "0.10"
prost-build = "0.12"
