[package]
name = "jito-sdk-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full", "macros"] }
tonic = { version = "0.10", features = ["tls-roots", "tls"] }
prost = "0.12"
prost-types = "0.12"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
rand = "0.8"

[build-dependencies]
tonic-build = "0.10"
